revdep/checks.noindex/geojsonsf/new/geojsonsf.Rcheck/00install.out
* installing *source* package ‘geojsonsf’ ...
** package ‘geojsonsf’ successfully unpacked and MD5 sums checked
** using staged installation
** libs
ccache /usr/local/clang8/bin/clang++ -std=gnu++11 -I"/Library/Frameworks/R.framework/Resources/include" -DNDEBUG -DSTRICT_R_HEADERS -I"/Users/dave/Documents/github/sfheaders/revdep/library.noindex/geojsonsf/jsonify/include" -I"/Users/dave/Documents/github/sfheaders/revdep/library.noindex/geojsonsf/rapidjsonr/include" -I"/Users/dave/Documents/github/sfheaders/revdep/library.noindex/geojsonsf/Rcpp/include" -I"/Users/dave/Documents/github/sfheaders/revdep/library.noindex/sfheaders/new/sfheaders/include" -isysroot /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk -I/usr/local/include -I../inst/include/ -fPIC  -Wall -g -O2  -c RcppExports.cpp -o RcppExports.o
ccache /usr/local/clang8/bin/clang++ -std=gnu++11 -I"/Library/Frameworks/R.framework/Resources/include" -DNDEBUG -DSTRICT_R_HEADERS -I"/Users/dave/Documents/github/sfheaders/revdep/library.noindex/geojsonsf/jsonify/include" -I"/Users/dave/Documents/github/sfheaders/revdep/library.noindex/geojsonsf/rapidjsonr/include" -I"/Users/dave/Documents/github/sfheaders/revdep/library.noindex/geojsonsf/Rcpp/include" -I"/Users/dave/Documents/github/sfheaders/revdep/library.noindex/sfheaders/new/sfheaders/include" -isysroot /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk -I/usr/local/include -I../inst/include/ -fPIC  -Wall -g -O2  -c df_geojson.cpp -o df_geojson.o
In file included from df_geojson.cpp:3:
../inst/include/geojsonsf/geojson/api/df_api.hpp:43:22: error: no matching function for call to 'sfg_dimension'
        std::string dim = sfheaders::sfg::sfg_dimension( n_geometry_columns );
                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/dave/Documents/github/sfheaders/revdep/library.noindex/sfheaders/new/sfheaders/include/sfheaders/sfg/sfg_dimension.hpp:24:22: note: candidate function not viable: requires 2 arguments, but 1 was provided
  inline std::string sfg_dimension(
                     ^
/Users/dave/Documents/github/sfheaders/revdep/library.noindex/sfheaders/new/sfheaders/include/sfheaders/sfg/sfg_dimension.hpp:47:22: note: candidate function not viable: requires 2 arguments, but 1 was provided
  inline std::string sfg_dimension( Rcpp::IntegerVector& iv, std::string xyzm ) {
                     ^
/Users/dave/Documents/github/sfheaders/revdep/library.noindex/sfheaders/new/sfheaders/include/sfheaders/sfg/sfg_dimension.hpp:52:22: note: candidate function not viable: requires 2 arguments, but 1 was provided
  inline std::string sfg_dimension( Rcpp::NumericVector& nv, std::string xyzm ) {
                     ^
/Users/dave/Documents/github/sfheaders/revdep/library.noindex/sfheaders/new/sfheaders/include/sfheaders/sfg/sfg_dimension.hpp:57:22: note: candidate function not viable: requires 2 arguments, but 1 was provided
  inline std::string sfg_dimension( Rcpp::IntegerMatrix& im, std::string xyzm ) {
                     ^
/Users/dave/Documents/github/sfheaders/revdep/library.noindex/sfheaders/new/sfheaders/include/sfheaders/sfg/sfg_dimension.hpp:62:22: note: candidate function not viable: requires 2 arguments, but 1 was provided
  inline std::string sfg_dimension( Rcpp::NumericMatrix& nm, std::string xyzm ) {
                     ^
/Users/dave/Documents/github/sfheaders/revdep/library.noindex/sfheaders/new/sfheaders/include/sfheaders/sfg/sfg_dimension.hpp:67:22: note: candidate function not viable: requires 2 arguments, but 1 was provided
  inline std::string sfg_dimension( Rcpp::DataFrame& df, std::string xyzm ) {
                     ^
/Users/dave/Documents/github/sfheaders/revdep/library.noindex/sfheaders/new/sfheaders/include/sfheaders/sfg/sfg_dimension.hpp:72:22: note: candidate function not viable: requires 2 arguments, but 1 was provided
  inline std::string sfg_dimension( SEXP x, std::string xyzm ) {
                     ^
In file included from df_geojson.cpp:3:
../inst/include/geojsonsf/geojson/api/df_api.hpp:129:22: error: no matching function for call to 'sfg_dimension'
        std::string dim = sfheaders::sfg::sfg_dimension( n_geometry_columns );
                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/dave/Documents/github/sfheaders/revdep/library.noindex/sfheaders/new/sfheaders/include/sfheaders/sfg/sfg_dimension.hpp:24:22: note: candidate function not viable: requires 2 arguments, but 1 was provided
  inline std::string sfg_dimension(
                     ^
/Users/dave/Documents/github/sfheaders/revdep/library.noindex/sfheaders/new/sfheaders/include/sfheaders/sfg/sfg_dimension.hpp:47:22: note: candidate function not viable: requires 2 arguments, but 1 was provided
  inline std::string sfg_dimension( Rcpp::IntegerVector& iv, std::string xyzm ) {
                     ^
/Users/dave/Documents/github/sfheaders/revdep/library.noindex/sfheaders/new/sfheaders/include/sfheaders/sfg/sfg_dimension.hpp:52:22: note: candidate function not viable: requires 2 arguments, but 1 was provided
  inline std::string sfg_dimension( Rcpp::NumericVector& nv, std::string xyzm ) {
                     ^
/Users/dave/Documents/github/sfheaders/revdep/library.noindex/sfheaders/new/sfheaders/include/sfheaders/sfg/sfg_dimension.hpp:57:22: note: candidate function not viable: requires 2 arguments, but 1 was provided
  inline std::string sfg_dimension( Rcpp::IntegerMatrix& im, std::string xyzm ) {
                     ^
/Users/dave/Documents/github/sfheaders/revdep/library.noindex/sfheaders/new/sfheaders/include/sfheaders/sfg/sfg_dimension.hpp:62:22: note: candidate function not viable: requires 2 arguments, but 1 was provided
  inline std::string sfg_dimension( Rcpp::NumericMatrix& nm, std::string xyzm ) {
                     ^
/Users/dave/Documents/github/sfheaders/revdep/library.noindex/sfheaders/new/sfheaders/include/sfheaders/sfg/sfg_dimension.hpp:67:22: note: candidate function not viable: requires 2 arguments, but 1 was provided
  inline std::string sfg_dimension( Rcpp::DataFrame& df, std::string xyzm ) {
                     ^
/Users/dave/Documents/github/sfheaders/revdep/library.noindex/sfheaders/new/sfheaders/include/sfheaders/sfg/sfg_dimension.hpp:72:22: note: candidate function not viable: requires 2 arguments, but 1 was provided
  inline std::string sfg_dimension( SEXP x, std::string xyzm ) {
                     ^
2 errors generated.
make: *** [df_geojson.o] Error 1
ERROR: compilation failed for package ‘geojsonsf’
* removing ‘/Users/dave/Documents/github/sfheaders/revdep/checks.noindex/geojsonsf/new/geojsonsf.Rcheck/geojsonsf’
